--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-bootstrap-v5": "^1.4.0",
