--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.22.0",
     "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
     "react-toastify": "^10.0.4"
   },
   "devDependencies": {
