--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-iframe": "^1.8.5",
     "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.22.0",
+    "react-toastify": "^10.0.4",
     "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4",
-    "react-toastify": "^10.0.4"
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
