--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@floating-ui/react": "^0.26.9",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.5",
     "font-awesome": "^4.7.0",
     "qrcode-terminal": "^0.12.0",
     "react": "^18.2.0",
