aviad fix + dev

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ VITE_PRODUCTION= false
 VITE_APP_GOOGLE_OAUTH_REDIRECT_URL=http://localhost:2500/
 VITE_APP_GOOGLE_CLIENT_ID=621188087499-i11g5muhu975dfbs2k642p96g4gbbtb2.apps.googleusercontent.com
 VITE_URL_PRODUCTION= https://engager-g262.onrender.com/
+VITE_URL_WHATSUP_PRODUCTION=https://____________.onrender.com/
+VITE_URL_WHATSUP_DEV=http://localhost:3000/api/
