--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_PRODUCTION= true
-VITE_APP_GOOGLE_OAUTH_REDIRECT_URL=http://localhost:2500/
-VITE_APP_GOOGLE_CLIENT_ID=621188087499-i11g5muhu975dfbs2k642p96g4gbbtb2.apps.googleusercontent.com
+VITE_PRODUCTION= false
+VITE_APP_GOOGLE_OAUTH_REDIRECT_URL=https://engager-zvi-g.netlify.app
+VITE_APP_GOOGLE_CLIENT_ID=474616359480-s8u0vlsvlusq5ghgn87isqous12uhk09.apps.googleusercontent.com
 VITE_URL_PRODUCTION=https://server-0tu9.onrender.com/
 VITE_URL_WHATSUP_PRODUCTION=https://.onrender.com/
 VITE_URL_WHATSUP_DEV=http://localhost:3000/api/
