--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_PRODUCTION= false
-VITE_APP_GOOGLE_OAUTH_REDIRECT_URL=https://p.engager.co.il
+VITE_APP_GOOGLE_OAUTH_REDIRECT_URL=https://p.engager.co.il/
 VITE_APP_GOOGLE_CLIENT_ID=474616359480-s8u0vlsvlusq5ghgn87isqous12uhk09.apps.googleusercontent.com
 VITE_URL_PRODUCTION=https://engager-server.onrender.com/
 VITE_URL_WHATSUP_PRODUCTION=https://.onrender.com/
